WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257952
REGRESSION(264622): some InteractionRegion occlusion layers are missing
https://bugs.webkit.org/show_bug.cgi?id=257952
Summary
REGRESSION(264622): some InteractionRegion occlusion layers are missing
Etienne
Reported
2023-06-12 03:16:46 PDT
Some InteractionRegion occlusion layers are missing
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2023-06-12 03:34:57 PDT
<
rdar://problem/110631042
>
Etienne
Comment 2
2023-06-12 03:35:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14858
EWS
Comment 3
2023-06-14 12:30:01 PDT
Committed
265160@main
(10ed5ca647f0): <
https://commits.webkit.org/265160@main
> Reviewed commits have been landed. Closing PR #14858 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug