REGRESSION(264622): some InteractionRegion occlusion layers are missing https://bugs.webkit.org/show_bug.cgi?id=257952 <rdar://110631042>

Reviewed by Simon Fraser.

Only clear InteractionRegions when the RenderLayerBacking stops
requiring its own backing.

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateDrawsContent):
Remove the previous `clearInteractionRegions()` call.
(WebCore::RenderLayerBacking::clearInteractionRegions):
Early return when the EventRegion has no InteractionRegion.
(WebCore::RenderLayerBacking::setRequiresOwnBackingStore):
Clear InteractionRegions when `requiresOwnBaking` turns false.

* LayoutTests/interaction-region/full-page-overlay-expected.txt:
* LayoutTests/interaction-region/full-page-overlay.html:
Update test to cover the regression.

Canonical link: https://commits.webkit.org/265160@main